@@ -1,0 +1,4 @@
+Image including source in subdir
+================================
+
+.. image:: img.*
